parse.output
Grammar

    0 $accept: Start $end

    1 Start: Expr

    2 Expr: TURN OB Expr CB
    3     | SEW OB Expr COMMA Expr CB
    4     | HDROW OB Expr CB
    5     | TLROWS OB Expr CB
    6     | HDCOL OB Expr CB
    7     | TLCOLS OB Expr CB
    8     | A
    9     | B

   10 $@1: %empty

   11 Expr: LET $@1 Decls IN Expr END
   12     | ID OB Actuals CB
   13     | ID

   14 Actuals: Expr
   15        | Expr COMMA Actuals

   16 Decls: Decl
   17      | Decl Decls

   18 $@2: %empty

   19 Decl: FUN ID $@2 OB Formals CB ASSIGN Expr
   20     | VAL ID ASSIGN Expr

   21 Formals: ID
   22        | ID COMMA Formals


Terminals, with rules where they appear

$end (0) 0
error (256)
A (258) 8
B (259) 9
TURN (260) 2
SEW (261) 3
HDROW (262) 4
TLROWS (263) 5
HDCOL (264) 6
TLCOLS (265) 7
COMMA (266) 3 15 22
OB (267) 2 3 4 5 6 7 12 19
CB (268) 2 3 4 5 6 7 12 19
LET (269) 11
FUN (270) 19
VAL (271) 20
ID (272) 12 13 19 20 21 22
IN (273) 11
END (274) 11
ASSIGN (275) 19 20


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
Start (22)
    on left: 1, on right: 0
Expr (23)
    on left: 2 3 4 5 6 7 8 9 11 12 13, on right: 1 2 3 4 5 6 7 11 14
    15 19 20
$@1 (24)
    on left: 10, on right: 11
Actuals (25)
    on left: 14 15, on right: 12 15
Decls (26)
    on left: 16 17, on right: 11 17
Decl (27)
    on left: 19 20, on right: 16 17
$@2 (28)
    on left: 18, on right: 19
Formals (29)
    on left: 21 22, on right: 19 22


State 0

    0 $accept: . Start $end

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Start  go to state 11
    Expr   go to state 12


State 1

    8 Expr: A .

    $default  reduce using rule 8 (Expr)


State 2

    9 Expr: B .

    $default  reduce using rule 9 (Expr)


State 3

    2 Expr: TURN . OB Expr CB

    OB  shift, and go to state 13


State 4

    3 Expr: SEW . OB Expr COMMA Expr CB

    OB  shift, and go to state 14


State 5

    4 Expr: HDROW . OB Expr CB

    OB  shift, and go to state 15


State 6

    5 Expr: TLROWS . OB Expr CB

    OB  shift, and go to state 16


State 7

    6 Expr: HDCOL . OB Expr CB

    OB  shift, and go to state 17


State 8

    7 Expr: TLCOLS . OB Expr CB

    OB  shift, and go to state 18


State 9

   11 Expr: LET . $@1 Decls IN Expr END

    $default  reduce using rule 10 ($@1)

    $@1  go to state 19


State 10

   12 Expr: ID . OB Actuals CB
   13     | ID .

    OB  shift, and go to state 20

    $default  reduce using rule 13 (Expr)


State 11

    0 $accept: Start . $end

    $end  shift, and go to state 21


State 12

    1 Start: Expr .

    $default  reduce using rule 1 (Start)


State 13

    2 Expr: TURN OB . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 22


State 14

    3 Expr: SEW OB . Expr COMMA Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 23


State 15

    4 Expr: HDROW OB . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 24


State 16

    5 Expr: TLROWS OB . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 25


State 17

    6 Expr: HDCOL OB . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 26


State 18

    7 Expr: TLCOLS OB . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 27


State 19

   11 Expr: LET $@1 . Decls IN Expr END

    FUN  shift, and go to state 28
    VAL  shift, and go to state 29

    Decls  go to state 30
    Decl   go to state 31


State 20

   12 Expr: ID OB . Actuals CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr     go to state 32
    Actuals  go to state 33


State 21

    0 $accept: Start $end .

    $default  accept


State 22

    2 Expr: TURN OB Expr . CB

    CB  shift, and go to state 34


State 23

    3 Expr: SEW OB Expr . COMMA Expr CB

    COMMA  shift, and go to state 35


State 24

    4 Expr: HDROW OB Expr . CB

    CB  shift, and go to state 36


State 25

    5 Expr: TLROWS OB Expr . CB

    CB  shift, and go to state 37


State 26

    6 Expr: HDCOL OB Expr . CB

    CB  shift, and go to state 38


State 27

    7 Expr: TLCOLS OB Expr . CB

    CB  shift, and go to state 39


State 28

   19 Decl: FUN . ID $@2 OB Formals CB ASSIGN Expr

    ID  shift, and go to state 40


State 29

   20 Decl: VAL . ID ASSIGN Expr

    ID  shift, and go to state 41


State 30

   11 Expr: LET $@1 Decls . IN Expr END

    IN  shift, and go to state 42


State 31

   16 Decls: Decl .
   17      | Decl . Decls

    FUN  shift, and go to state 28
    VAL  shift, and go to state 29

    $default  reduce using rule 16 (Decls)

    Decls  go to state 43
    Decl   go to state 31


State 32

   14 Actuals: Expr .
   15        | Expr . COMMA Actuals

    COMMA  shift, and go to state 44

    $default  reduce using rule 14 (Actuals)


State 33

   12 Expr: ID OB Actuals . CB

    CB  shift, and go to state 45


State 34

    2 Expr: TURN OB Expr CB .

    $default  reduce using rule 2 (Expr)


State 35

    3 Expr: SEW OB Expr COMMA . Expr CB

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 46


State 36

    4 Expr: HDROW OB Expr CB .

    $default  reduce using rule 4 (Expr)


State 37

    5 Expr: TLROWS OB Expr CB .

    $default  reduce using rule 5 (Expr)


State 38

    6 Expr: HDCOL OB Expr CB .

    $default  reduce using rule 6 (Expr)


State 39

    7 Expr: TLCOLS OB Expr CB .

    $default  reduce using rule 7 (Expr)


State 40

   19 Decl: FUN ID . $@2 OB Formals CB ASSIGN Expr

    $default  reduce using rule 18 ($@2)

    $@2  go to state 47


State 41

   20 Decl: VAL ID . ASSIGN Expr

    ASSIGN  shift, and go to state 48


State 42

   11 Expr: LET $@1 Decls IN . Expr END

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 49


State 43

   17 Decls: Decl Decls .

    $default  reduce using rule 17 (Decls)


State 44

   15 Actuals: Expr COMMA . Actuals

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr     go to state 32
    Actuals  go to state 50


State 45

   12 Expr: ID OB Actuals CB .

    $default  reduce using rule 12 (Expr)


State 46

    3 Expr: SEW OB Expr COMMA Expr . CB

    CB  shift, and go to state 51


State 47

   19 Decl: FUN ID $@2 . OB Formals CB ASSIGN Expr

    OB  shift, and go to state 52


State 48

   20 Decl: VAL ID ASSIGN . Expr

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 53


State 49

   11 Expr: LET $@1 Decls IN Expr . END

    END  shift, and go to state 54


State 50

   15 Actuals: Expr COMMA Actuals .

    $default  reduce using rule 15 (Actuals)


State 51

    3 Expr: SEW OB Expr COMMA Expr CB .

    $default  reduce using rule 3 (Expr)


State 52

   19 Decl: FUN ID $@2 OB . Formals CB ASSIGN Expr

    ID  shift, and go to state 55

    Formals  go to state 56


State 53

   20 Decl: VAL ID ASSIGN Expr .

    $default  reduce using rule 20 (Decl)


State 54

   11 Expr: LET $@1 Decls IN Expr END .

    $default  reduce using rule 11 (Expr)


State 55

   21 Formals: ID .
   22        | ID . COMMA Formals

    COMMA  shift, and go to state 57

    $default  reduce using rule 21 (Formals)


State 56

   19 Decl: FUN ID $@2 OB Formals . CB ASSIGN Expr

    CB  shift, and go to state 58


State 57

   22 Formals: ID COMMA . Formals

    ID  shift, and go to state 55

    Formals  go to state 59


State 58

   19 Decl: FUN ID $@2 OB Formals CB . ASSIGN Expr

    ASSIGN  shift, and go to state 60


State 59

   22 Formals: ID COMMA Formals .

    $default  reduce using rule 22 (Formals)


State 60

   19 Decl: FUN ID $@2 OB Formals CB ASSIGN . Expr

    A       shift, and go to state 1
    B       shift, and go to state 2
    TURN    shift, and go to state 3
    SEW     shift, and go to state 4
    HDROW   shift, and go to state 5
    TLROWS  shift, and go to state 6
    HDCOL   shift, and go to state 7
    TLCOLS  shift, and go to state 8
    LET     shift, and go to state 9
    ID      shift, and go to state 10

    Expr  go to state 61


State 61

   19 Decl: FUN ID $@2 OB Formals CB ASSIGN Expr .

    $default  reduce using rule 19 (Decl)
